--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,8 @@
     <dimen name="player_play_btn_size">50dp</dimen>
     <dimen name="controller_time_text_size">14sp</dimen>
     <dimen name="player_default_spacing">10dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="dp_15">15dp</dimen>
 </resources>
